# convly

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
arch/: PKGBUILD  convly-studio.desktop
docs/: current-react-overview.md
scripts/arch/: install-arch.sh  uninstall-arch.sh
scripts/release/: generate-release-notes.sh  verify.sh
src/: App.tsx  app.css  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BottomToolbar.tsx  CanvasWorkspace.tsx  CharacterEditModal.tsx  CharacterFlowNode.tsx  CharacterModal.tsx  Connection.tsx  CustomConnectionLine.tsx  CustomizeModal.tsx  ExportModal.tsx  FloatingEdge.tsx  MessageFlowNode.tsx  PhonePreview.tsx  RightPanel.tsx  TemplateModal.tsx  VideoPlayerModal.tsx
src/components/ui/: sidebar.tsx  theme-provider.tsx  theme-toggle.tsx
src/hooks/: usePerformance.ts  usePerformantNodes.ts
src/lib/: types.ts
src/lib/components/canvas/: CharacterFlowNode.svelte  FloatingEdge.svelte  MessageFlowNode.svelte
src/lib/components/workspace/: BottomToolbar.svelte  CanvasWorkspace.svelte  CharacterEditor.svelte  CharacterManagerDialog.svelte  LeftSidebar.svelte  (+4 more)
src/lib/stores/: appStore.ts
src/lib/utils/: animationTimeline.ts  audioMixer.ts  conversationQA.ts  domCapture.ts  indexedDB.ts  messageFlow.ts  videoExport.ts
src/routes/: +layout.svelte  +page.svelte
src/utils/: edgeUtils.ts  messageFlow.ts
(+3 files in other folders)
