[package]
name = "convly_studio"
version = "0.1.0"
description = "Convly Studio desktop app"
authors = ["Convly Team"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "convly_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
